Gallery page: Fixed messages visibility

--- a/view/adminhtml/web/css/source/_media-gallery.less
+++ b/view/adminhtml/web/css/source/_media-gallery.less
@@ -9,6 +9,11 @@
     .messages {
         position: fixed;
         top: 0;
+        z-index: 502;
+        .media_gallery-media-index & {
+            top: auto;
+            bottom: 0;
+        }
     }
 
     // Improve grid settings to fill more available space
